[package]
name = "eth-tests"
version = "0.1.0"
edition = "2018"

[dependencies]
ethers = { version = "2.0", features = ["rustls"] }
tokio = { version = "1.28.2", features = ["full"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
log = "0.4.21"
fern = "0.6.2"
futures = "0.3.30"
web3 = "0.19.0"
hex = "0.4.3"
lazy_static = "1.4.0"
rustc-hex = "2.1.0"
rand = "0.8.5"
